--- a/series.conf
+++ b/series.conf
@@ -12077,6 +12077,7 @@
 	patches.suse/md-make-rdev_addable-usable-for-rcu-mode.patch
 	patches.suse/nvmet-exit-debugfs-after-discovery-subsystem-exits.patch
 	patches.suse/lib-sbitmap-convert-shallow_depth-from-one-word-to-the-who.patch
+	patches.suse/tools-power-turbostat-regression-fix-show-C1E.patch
 	patches.suse/tools-power-turbostat-Fix-build-with-musl.patch
 	patches.suse/tools-power-turbostat-Handle-cap_get_proc-ENOSYS.patch
 	patches.suse/tools-power-turbostat-Fix-bogus-SysWatt-for-forked-p.patch
