--- a/series.conf
+++ b/series.conf
@@ -12086,6 +12086,7 @@
 	patches.suse/tools-power-turbostat-Support-more-than-64-built-in-counters.patch
 	patches.suse/tools-power-turbostat-probe-and-display-L3-cache-topology.patch
 	patches.suse/tools-power-turbostat-delete-GET_PKG.patch
+	patches.suse/tools-power-turbostat-add-format-average-for-external-attributes.patch
 	patches.suse/tools-power-turbostat-Handle-non-root-legacy-uncore-.patch
 	patches.suse/sunrpc-fix-handling-of-server-side-tls-alerts.patch
 	patches.suse/x86-sev-Evict-cache-lines-during-SNP-memory-validatio.patch
