--- a/series.conf
+++ b/series.conf
@@ -35375,6 +35375,7 @@
 	patches.suse/backlight-led-bl-Add-devlink-to-supplier-LEDs.patch
 	patches.suse/backlight-lp855x-Fix-lp855x.h-kernel-doc-warnings.patch
 	patches.suse/HID-logitech-dj-Remove-duplicate-error-logging.patch
+	patches.suse/HID-logitech-hidpp-Do-not-assume-FAP-in-hidpp_send_m.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
