--- a/series.conf
+++ b/series.conf
@@ -35345,6 +35345,7 @@
 	patches.suse/wifi-ieee80211-correct-FILS-status-codes.patch
 	patches.suse/wifi-nl80211-vendor-cmd-intel-fix-a-blank-kernel-doc.patch
 	patches.suse/gpu-host1x-Fix-race-in-syncpt-alloc-free.patch
+	patches.suse/drm-gma500-Remove-unused-helper-psb_fbdev_fb_setcolr.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
