--- a/series.conf
+++ b/series.conf
@@ -35372,6 +35372,7 @@
 	patches.suse/leds-leds-lp50xx-LP5009-supports-3-modules-for-a-tot.patch
 	patches.suse/leds-leds-lp50xx-Enable-chip-before-any-communicatio.patch
 	patches.suse/leds-netxbig-Fix-GPIO-descriptor-leak-in-error-paths.patch
+	patches.suse/backlight-led-bl-Add-devlink-to-supplier-LEDs.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
