--- a/series.conf
+++ b/series.conf
@@ -35363,6 +35363,7 @@
 	patches.suse/ASoC-qcom-q6asm-dai-perform-correct-state-check-befo.patch
 	patches.suse/ASoC-stm32-sai-fix-device-leak-on-probe.patch
 	patches.suse/ASoC-stm32-sai-fix-clk-prepare-imbalance-on-probe-fa.patch
+	patches.suse/ASoC-stm32-sai-fix-OF-node-leak-on-probe.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
