--- a/series.conf
+++ b/series.conf
@@ -35374,6 +35374,7 @@
 	patches.suse/leds-netxbig-Fix-GPIO-descriptor-leak-in-error-paths.patch
 	patches.suse/backlight-led-bl-Add-devlink-to-supplier-LEDs.patch
 	patches.suse/backlight-lp855x-Fix-lp855x.h-kernel-doc-warnings.patch
+	patches.suse/HID-logitech-dj-Remove-duplicate-error-logging.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
