--- a/series.conf
+++ b/series.conf
@@ -35370,6 +35370,7 @@
 	patches.suse/hwmon-max16065-Use-local-variable-to-avoid-TOCTOU.patch
 	patches.suse/leds-leds-lp50xx-Allow-LED-0-to-be-added-to-module-b.patch
 	patches.suse/leds-leds-lp50xx-LP5009-supports-3-modules-for-a-tot.patch
+	patches.suse/leds-leds-lp50xx-Enable-chip-before-any-communicatio.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
