--- a/series.conf
+++ b/series.conf
@@ -35355,6 +35355,7 @@
 	patches.suse/drm-mediatek-Fix-device-node-reference-leak-in-mtk_d.patch
 	patches.suse/drm-nouveau-restrict-the-flush-page-to-a-32-bit-addr.patch
 	patches.suse/drm-amd-display-Fix-logical-vs-bitwise-bug-in-get_em.patch
+	patches.suse/drm-amdgpu-add-missing-lock-to-amdgpu_ttm_access_mem.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
