--- a/series.conf
+++ b/series.conf
@@ -35387,6 +35387,7 @@
 	patches.suse/hwmon-w83l786ng-Convert-macros-to-functions-to-avoid.patch
 	patches.suse/hwmon-max16065-Use-local-variable-to-avoid-TOCTOU.patch
 	patches.suse/mfd-altera-sysmgr-Fix-device-leak-on-sysmgr-regmap-l.patch
+	patches.suse/mfd-da9055-Fix-missing-regmap_del_irq_chip-in-error-.patch
 	patches.suse/leds-leds-lp50xx-Allow-LED-0-to-be-added-to-module-b.patch
 	patches.suse/leds-leds-lp50xx-LP5009-supports-3-modules-for-a-tot.patch
 	patches.suse/leds-leds-lp50xx-Enable-chip-before-any-communicatio.patch
