--- a/series.conf
+++ b/series.conf
@@ -35356,6 +35356,7 @@
 	patches.suse/media-v4l2-mem2mem-Fix-outdated-documentation.patch
 	patches.suse/media-verisilicon-Protect-G2-HEVC-decoder-against-in.patch
 	patches.suse/media-amphion-Cancel-message-work-before-releasing-t.patch
+	patches.suse/media-renesas-rcar_drif-fix-device-node-reference-le.patch
 	patches.suse/gpu-host1x-Fix-race-in-syncpt-alloc-free.patch
 	patches.suse/drm-gma500-Remove-unused-helper-psb_fbdev_fb_setcolr.patch
 	patches.suse/drm-vgem-fence-Fix-potential-deadlock-on-release.patch
