--- a/series.conf
+++ b/series.conf
@@ -35354,6 +35354,7 @@
 	patches.suse/media-vidtv-initialize-local-pointers-upon-transfer-.patch
 	patches.suse/media-cec-Fix-debugfs-leak-on-bus_register-failure.patch
 	patches.suse/media-v4l2-mem2mem-Fix-outdated-documentation.patch
+	patches.suse/media-verisilicon-Protect-G2-HEVC-decoder-against-in.patch
 	patches.suse/gpu-host1x-Fix-race-in-syncpt-alloc-free.patch
 	patches.suse/drm-gma500-Remove-unused-helper-psb_fbdev_fb_setcolr.patch
 	patches.suse/drm-vgem-fence-Fix-potential-deadlock-on-release.patch
