--- a/series.conf
+++ b/series.conf
@@ -35360,6 +35360,7 @@
 	patches.suse/media-samsung-exynos4-is-fix-potential-ABBA-deadlock.patch
 	patches.suse/media-vpif_capture-fix-section-mismatch.patch
 	patches.suse/media-vpif_display-fix-section-mismatch.patch
+	patches.suse/media-videobuf2-Fix-device-reference-leak-in-vb2_dc_.patch
 	patches.suse/gpu-host1x-Fix-race-in-syncpt-alloc-free.patch
 	patches.suse/drm-gma500-Remove-unused-helper-psb_fbdev_fb_setcolr.patch
 	patches.suse/drm-vgem-fence-Fix-potential-deadlock-on-release.patch
