--- a/series.conf
+++ b/series.conf
@@ -35347,6 +35347,7 @@
 	patches.suse/media-dvb-usb-dtv5100-fix-out-of-bounds-in-dtv5100_i.patch
 	patches.suse/media-TDA1997x-Remove-redundant-cancel_delayed_work-.patch
 	patches.suse/media-i2c-adv7842-Remove-redundant-cancel_delayed_wo.patch
+	patches.suse/media-i2c-ADV7604-Remove-redundant-cancel_delayed_wo.patch
 	patches.suse/gpu-host1x-Fix-race-in-syncpt-alloc-free.patch
 	patches.suse/drm-gma500-Remove-unused-helper-psb_fbdev_fb_setcolr.patch
 	patches.suse/drm-vgem-fence-Fix-potential-deadlock-on-release.patch
