--- a/series.conf
+++ b/series.conf
@@ -35358,6 +35358,7 @@
 	patches.suse/media-amphion-Cancel-message-work-before-releasing-t.patch
 	patches.suse/media-renesas-rcar_drif-fix-device-node-reference-le.patch
 	patches.suse/media-samsung-exynos4-is-fix-potential-ABBA-deadlock.patch
+	patches.suse/media-vpif_capture-fix-section-mismatch.patch
 	patches.suse/gpu-host1x-Fix-race-in-syncpt-alloc-free.patch
 	patches.suse/drm-gma500-Remove-unused-helper-psb_fbdev_fb_setcolr.patch
 	patches.suse/drm-vgem-fence-Fix-potential-deadlock-on-release.patch
