--- a/series.conf
+++ b/series.conf
@@ -35351,6 +35351,7 @@
 	patches.suse/media-adv7842-Avoid-possible-out-of-bounds-array-acc.patch
 	patches.suse/media-msp3400-Avoid-possible-out-of-bounds-array-acc.patch
 	patches.suse/media-pvrusb2-Fix-incorrect-variable-used-in-trace-m.patch
+	patches.suse/media-vidtv-initialize-local-pointers-upon-transfer-.patch
 	patches.suse/gpu-host1x-Fix-race-in-syncpt-alloc-free.patch
 	patches.suse/drm-gma500-Remove-unused-helper-psb_fbdev_fb_setcolr.patch
 	patches.suse/drm-vgem-fence-Fix-potential-deadlock-on-release.patch
