--- a/series.conf
+++ b/series.conf
@@ -35402,6 +35402,7 @@
 	patches.suse/mfd-altera-sysmgr-Fix-device-leak-on-sysmgr-regmap-l.patch
 	patches.suse/mfd-da9055-Fix-missing-regmap_del_irq_chip-in-error-.patch
 	patches.suse/mfd-max77620-Fix-potential-IRQ-chip-conflict-when-pr.patch
+	patches.suse/mfd-mt6397-irq-Fix-missing-irq_domain_remove-in-erro.patch
 	patches.suse/leds-leds-lp50xx-Allow-LED-0-to-be-added-to-module-b.patch
 	patches.suse/leds-leds-lp50xx-LP5009-supports-3-modules-for-a-tot.patch
 	patches.suse/leds-leds-lp50xx-Enable-chip-before-any-communicatio.patch
