--- a/series.conf
+++ b/series.conf
@@ -35420,6 +35420,7 @@
 	patches.suse/power-supply-apm_power-only-unset-own-apm_get_power_.patch
 	patches.suse/PCI-PM-Reinstate-clearing-state_saved-in-legacy-and-.patch
 	patches.suse/PCI-dwc-Fix-wrong-PORT_LOGIC_LTSSM_STATE_MASK-defini.patch
+	patches.suse/PCI-keystone-Exit-ks_pcie_probe-for-invalid-mode.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
