--- a/series.conf
+++ b/series.conf
@@ -35419,6 +35419,7 @@
 	patches.suse/power-supply-wm831x-Check-wm831x_set_bits-return-val.patch
 	patches.suse/power-supply-apm_power-only-unset-own-apm_get_power_.patch
 	patches.suse/PCI-PM-Reinstate-clearing-state_saved-in-legacy-and-.patch
+	patches.suse/PCI-dwc-Fix-wrong-PORT_LOGIC_LTSSM_STATE_MASK-defini.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
