--- a/series.conf
+++ b/series.conf
@@ -13930,6 +13930,7 @@
 	patches.suse/i2c-i2c.h-fix-a-bad-kernel-doc-line.patch
 	patches.suse/i2c-amd-mp2-fix-reference-leak-in-MP2-PCI-device.patch
 	patches.suse/regulator-fixed-Rely-on-the-core-freeing-the-enable-.patch
+	patches.suse/ALSA-hda-cs35l41-Fix-NULL-pointer-dereference-in-cs3-c34b04c.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
