--- a/series.conf
+++ b/series.conf
@@ -35513,6 +35513,7 @@
 	patches.suse/drm-nouveau-Replace-sprintf-with-sysfs_emit.patch
 	patches.suse/drm-ttm-Avoid-NULL-pointer-deref-for-evicted-BOs.patch
 	patches.suse/drm-mgag200-Fix-big-endian-support.patch
+	patches.suse/irqchip-mchp-eic-Fix-error-code-in-mchp_eic_domain_a.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
