--- a/series.conf
+++ b/series.conf
@@ -35512,6 +35512,7 @@
 	patches.suse/rtc-gamecube-Check-the-return-value-of-ioremap.patch
 	patches.suse/drm-nouveau-Replace-sprintf-with-sysfs_emit.patch
 	patches.suse/drm-ttm-Avoid-NULL-pointer-deref-for-evicted-BOs.patch
+	patches.suse/drm-mgag200-Fix-big-endian-support.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
