--- a/series.conf
+++ b/series.conf
@@ -35511,6 +35511,7 @@
 	patches.suse/ASoC-codecs-wcd938x-fix-OF-node-leaks-on-probe-failu.patch
 	patches.suse/rtc-gamecube-Check-the-return-value-of-ioremap.patch
 	patches.suse/drm-nouveau-Replace-sprintf-with-sysfs_emit.patch
+	patches.suse/drm-ttm-Avoid-NULL-pointer-deref-for-evicted-BOs.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
