--- a/series.conf
+++ b/series.conf
@@ -57054,6 +57054,7 @@
 	patches.suse/ASoC-codecs-wcd938x-fix-OF-node-leaks-on-probe-failu.patch
 	patches.suse/drm-amdkfd-Use-huge-page-size-to-check-split-svm-ran.patch
 	patches.suse/drm-i915-Fix-format-string-truncation-warning.patch
+	patches.suse/drm-plane-Fix-IS_ERR-vs-NULL-check-in-drm_plane_crea.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
