--- a/series.conf
+++ b/series.conf
@@ -57055,6 +57055,7 @@
 	patches.suse/drm-amdkfd-Use-huge-page-size-to-check-split-svm-ran.patch
 	patches.suse/drm-i915-Fix-format-string-truncation-warning.patch
 	patches.suse/drm-plane-Fix-IS_ERR-vs-NULL-check-in-drm_plane_crea.patch
+	patches.suse/drm-nouveau-refactor-deprecated-strcpy.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
