--- a/series.conf
+++ b/series.conf
@@ -57052,6 +57052,7 @@
 	patches.suse/ASoC-ak4458-Disable-regulator-when-error-happens.patch
 	patches.suse/ASoC-ak5558-Disable-regulator-when-error-happens.patch
 	patches.suse/ASoC-codecs-wcd938x-fix-OF-node-leaks-on-probe-failu.patch
+	patches.suse/drm-amdkfd-Use-huge-page-size-to-check-split-svm-ran.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
