--- a/series.conf
+++ b/series.conf
@@ -13949,6 +13949,7 @@
 	patches.suse/drm-tilcdc-Fix-removal-actions-in-case-of-failed-pro.patch
 	patches.suse/drm-mgag200-Fix-big-endian-support.patch
 	patches.suse/args-fix-documentation-to-reflect-the-correct-number.patch
+	patches.suse/irqchip-mchp-eic-Fix-error-code-in-mchp_eic_domain_a.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
