--- a/series.conf
+++ b/series.conf
@@ -13941,6 +13941,7 @@
 	patches.suse/ASoC-codecs-wcd939x-fix-OF-node-leaks-on-probe-failu.patch
 	patches.suse/rtc-gamecube-Check-the-return-value-of-ioremap.patch
 	patches.suse/drm-amdkfd-Use-huge-page-size-to-check-split-svm-ran.patch
+	patches.suse/drm-i915-Fix-format-string-truncation-warning.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
