--- a/series.conf
+++ b/series.conf
@@ -13942,6 +13942,7 @@
 	patches.suse/rtc-gamecube-Check-the-return-value-of-ioremap.patch
 	patches.suse/drm-amdkfd-Use-huge-page-size-to-check-split-svm-ran.patch
 	patches.suse/drm-i915-Fix-format-string-truncation-warning.patch
+	patches.suse/drm-plane-Fix-IS_ERR-vs-NULL-check-in-drm_plane_crea.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
