--- a/series.conf
+++ b/series.conf
@@ -13939,6 +13939,7 @@
 	patches.suse/ASoC-ak5558-Disable-regulator-when-error-happens.patch
 	patches.suse/ASoC-codecs-wcd938x-fix-OF-node-leaks-on-probe-failu.patch
 	patches.suse/ASoC-codecs-wcd939x-fix-OF-node-leaks-on-probe-failu.patch
+	patches.suse/rtc-gamecube-Check-the-return-value-of-ioremap.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
