--- a/series.conf
+++ b/series.conf
@@ -12560,6 +12560,7 @@
 	patches.kernel.org/6.12.62-008-ksmbd-ipc-fix-use-after-free-in-ipc_msg_send_.patch
 	patches.kernel.org/6.12.62-009-locking-spinlock-debug-Fix-data-race-in-do_ra.patch
 	patches.kernel.org/6.12.62-010-ext4-add-i_data_sem-protection-in-ext4_destro.patch
+	patches.kernel.org/6.12.62-011-comedi-pcl818-fix-null-ptr-deref-in-pcl818_ai.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
