--- a/series.conf
+++ b/series.conf
@@ -12567,6 +12567,7 @@
 	patches.kernel.org/6.12.62-015-USB-serial-option-move-Telit-0x10c7-compositi.patch
 	patches.kernel.org/6.12.62-016-USB-serial-ftdi_sio-match-on-interface-number.patch
 	patches.kernel.org/6.12.62-017-serial-add-support-of-CPCI-cards.patch
+	patches.kernel.org/6.12.62-018-USB-serial-belkin_sa-fix-TIOCMBIS-and-TIOCMBI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
