--- a/series.conf
+++ b/series.conf
@@ -12577,6 +12577,7 @@
 	patches.kernel.org/6.12.62-025-smb-fix-invalid-username-check-in-smb3_fs_con.patch
 	patches.kernel.org/6.12.62-026-drm-amdkfd-Fix-GPU-mappings-for-APU-after-pre.patch
 	patches.kernel.org/6.12.62-027-ALSA-usb-audio-Add-native-DSD-quirks-for-Pure.patch
+	patches.kernel.org/6.12.62-028-bfs-Reconstruct-file-type-when-loading-from-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
