--- a/series.conf
+++ b/series.conf
@@ -12572,6 +12572,7 @@
 	patches.kernel.org/6.12.62-020-ftrace-bpf-Fix-IPMODIFY-DIRECT-in-modify_ftra.patch
 	patches.kernel.org/6.12.62-021-spi-xilinx-increase-number-of-retries-before-.patch
 	patches.kernel.org/6.12.62-022-spi-imx-keep-dma-request-disabled-before-dma-.patch
+	patches.kernel.org/6.12.62-023-drm-vmwgfx-Use-kref-in-vmw_bo_dirty.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
