--- a/series.conf
+++ b/series.conf
@@ -12556,6 +12556,7 @@
 	patches.kernel.org/6.12.62-004-xfrm-flush-all-states-in-xfrm_state_fini.patch
 	patches.kernel.org/6.12.62-005-Documentation-process-Also-mention-Sasha-Levi.patch
 	patches.kernel.org/6.12.62-006-jbd2-avoid-bug_on-in-jbd2_journal_get_create_.patch
+	patches.kernel.org/6.12.62-007-ext4-refresh-inline-data-size-before-write-op.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
