--- a/series.conf
+++ b/series.conf
@@ -12586,6 +12586,7 @@
 	patches.kernel.org/6.12.62-034-platform-x86-huawei-wmi-add-keys-for-HONOR-mo.patch
 	patches.kernel.org/6.12.62-035-platform-x86-amd-pmc-Add-Lenovo-Legion-Go-2-t.patch
 	patches.kernel.org/6.12.62-036-platform-x86-amd-pmc-Add-spurious_8042-to-Xbo.patch
+	patches.kernel.org/6.12.62-037-HID-elecom-Add-support-for-ELECOM-M-XT3URBK-0.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
