--- a/series.conf
+++ b/series.conf
@@ -12594,6 +12594,7 @@
 	patches.kernel.org/6.12.62-042-comedi-c6xdigio-Fix-invalid-PNP-driver-unregi.patch
 	patches.kernel.org/6.12.62-043-comedi-multiq3-sanitize-config-options-in-mul.patch
 	patches.kernel.org/6.12.62-044-comedi-check-device-s-attached-status-in-comp.patch
+	patches.kernel.org/6.12.62-045-staging-rtl8723bs-fix-out-of-bounds-read-in-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
