--- a/series.conf
+++ b/series.conf
@@ -12570,6 +12570,7 @@
 	patches.kernel.org/6.12.62-018-USB-serial-belkin_sa-fix-TIOCMBIS-and-TIOCMBI.patch
 	patches.kernel.org/6.12.62-019-USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBI.patch
 	patches.kernel.org/6.12.62-020-ftrace-bpf-Fix-IPMODIFY-DIRECT-in-modify_ftra.patch
+	patches.kernel.org/6.12.62-021-spi-xilinx-increase-number-of-retries-before-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
