--- a/series.conf
+++ b/series.conf
@@ -12576,6 +12576,7 @@
 	patches.kernel.org/6.12.62-024-Bluetooth-btrtl-Avoid-loading-the-config-file.patch
 	patches.kernel.org/6.12.62-025-smb-fix-invalid-username-check-in-smb3_fs_con.patch
 	patches.kernel.org/6.12.62-026-drm-amdkfd-Fix-GPU-mappings-for-APU-after-pre.patch
+	patches.kernel.org/6.12.62-027-ALSA-usb-audio-Add-native-DSD-quirks-for-Pure.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
