--- a/series.conf
+++ b/series.conf
@@ -12563,6 +12563,7 @@
 	patches.kernel.org/6.12.62-011-comedi-pcl818-fix-null-ptr-deref-in-pcl818_ai.patch
 	patches.kernel.org/6.12.62-012-KVM-SVM-Don-t-skip-unrelated-instruction-if-I.patch
 	patches.kernel.org/6.12.62-013-USB-serial-option-add-Foxconn-T99W760.patch
+	patches.kernel.org/6.12.62-014-USB-serial-option-add-Telit-Cinterion-FE910C0.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
