--- a/series.conf
+++ b/series.conf
@@ -12591,6 +12591,7 @@
 	patches.kernel.org/6.12.62-039-samples-work-around-glibc-redefining-some-of-.patch
 	patches.kernel.org/6.12.62-040-wifi-rtl8xxxu-Add-USB-ID-2001-3328-for-D-Link.patch
 	patches.kernel.org/6.12.62-041-wifi-rtw88-Add-USB-ID-2001-3329-for-D-Link-AC.patch
+	patches.kernel.org/6.12.62-042-comedi-c6xdigio-Fix-invalid-PNP-driver-unregi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
